--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-    <svg id="chart" width="600" height="500">
+    <svg width="1600" height="600">
     </svg>
     <script type="text/javascript" src="funcjs/index.js"></script>
 </body>
