--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-    <svg width="1600" height="600">
+    <svg width="1600" height="600" viewBox="0 0 1600 600">
     </svg>
-    <script type="text/javascript" src="funcjs/index.js"></script>
+    <script type="text/javascript" src="funcjs/i2.js"></script>
 </body>
 </html>
