--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
-    <svg width="1600" height="600" viewBox="0 0 1600 600">
+    <svg viewBox="0 0 1800 600" id="sbox">
     </svg>
     <script type="text/javascript" src="funcjs/i2.js"></script>
 </body>
