--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <svg viewBox="0 0 1800 600" id="sbox">
     </svg>
+    <button class="btn btn-danger" id="clear-link">Clear</button>
     <script type="text/javascript" src="funcjs/utils.js"></script>
     <script type="text/javascript" src="funcjs/i2.js"></script>
 </body>
